fixing python comments not showing in github

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -238,11 +238,14 @@
    "outputs": [],
    "source": [
     "# extract all the files from the zip file\n",
-    "# the with statement is commonly used to open a file and make sure it is closed after the block of code\n",
-    "# it means that the code already expects we to use it to handle files, if the code breaks or something bad happens, the file will be gracefully closed.\n",
+    "# the with statement is commonly used to open a file\n",
+    "# and make sure it is closed after the block of code\n",
+    "# it means that the code already expects we to use it to handle files, \n",
+    "# if the code breaks or something bad happens, the file will be gracefully closed.\n",
     "\n",
     "with ZipFile('titanic.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('titanic') # without the 'titanic' string, it would just extract to the current working directory\n"
+    "    zip_ref.extractall('titanic') \n",
+    "# without the 'titanic' string, it would just extract to the current working directory\n"
    ]
   },
   {
@@ -323,7 +326,8 @@
    "source": [
     "# pandas can read multiple different files types, this is just one option:\n",
     "df = pd.read_csv(filepath_or_buffer='titanic/train.csv')\n",
-    "# df is commonly used as the nickname for \"dataframe\", which is the name of the data structure that pandas uses to store data"
+    "# df is commonly used as the nickname for \"dataframe\", \n",
+    "# which is the name of the data structure that pandas uses to store data"
    ]
   },
   {
@@ -586,7 +590,8 @@
     }
    ],
    "source": [
-    "# to better understand what each column means, read in the website: https://www.kaggle.com/c/titanic/data\n",
+    "# to better understand what each column means,\n",
+    "# read in the website: https://www.kaggle.com/c/titanic/data\n",
     "df"
    ]
   },
@@ -633,8 +638,10 @@
    "source": [
     "# or even agrouping the data by a column to get the mean of groups\n",
     "df.groupby(by=\"Sex\")[\"Age\"].mean()\n",
-    "# this line of command: df is our pandas dataframe, that contains the \"groupby\" method, that groups the data by the \n",
-    "# column given in the \"by\" parameter, and then we select the column we want to get the mean from, and then we call the\n",
+    "# this line of command: df is our pandas dataframe, \n",
+    "# that contains the \"groupby\" method, that groups the data by the \n",
+    "# column given in the \"by\" parameter, and then \n",
+    "# we select the column we want to get the mean from, and then we call the\n",
     "# \"mean\" method to get the mean of each group"
    ]
   },
@@ -701,7 +708,8 @@
     }
    ],
    "source": [
-    "# histplot already has many default parameters, so we can just call it with the data we want to plot\n",
+    "# histplot already has many default parameters,\n",
+    "# so we can just call it with the data we want to plot\n",
     "sns.histplot(data=df, x=\"Age\")"
    ]
   },
@@ -733,7 +741,8 @@
    ],
    "source": [
     "# it's highly customizable\n",
-    "sns.histplot(data=df, x=\"Age\", bins=40, kde=True) # kde = kernel density estimation\n",
+    "sns.histplot(data=df, x=\"Age\", bins=40, kde=True) \n",
+    "# kde = kernel density estimation\n",
     "# bins is the number of bars in the histogram\n"
    ]
   },
@@ -743,10 +752,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# in short: pandas to manipulate the data, seaborn/matplotlib to plot what we manipulated to understand it better\n",
-    "# in kaggle it's common to have many datasets, and there's normally a target variable, that we want to predict\n",
-    "# let's built a really quick and simple model to predict the \"Survived\" column, based only in the \"Age\" column\n",
-    "# we will use the sklearn library, that has many machine learning models already implemented\n",
+    "# in short: pandas to manipulate the data, \n",
+    "# seaborn/matplotlib to plot what we manipulated to understand it better\n",
+    "# in kaggle it's common to have many datasets, \n",
+    "# and there's normally a target variable, that we want to predict\n",
+    "# let's built a really quick and simple model\n",
+    "# to predict the \"Survived\" column, based only in the \"Age\" column\n",
+    "# we will use the sklearn library,\n",
+    "# that has many machine learning models already implemented\n",
     "from sklearn.linear_model import LogisticRegression"
    ]
   },
@@ -768,7 +781,8 @@
    ],
    "source": [
     "# to do this, before we need to fill the missing values in the \"Age\" column\n",
-    "df['Age'].isna().sum() # this will give us the number of missing values in the \"Age\" column"
+    "df['Age'].isna().sum() # this will give us\n",
+    "# the number of missing values in the \"Age\" column"
    ]
   },
   {
@@ -1247,9 +1261,11 @@
    "source": [
     "# we can also get the score of the model, this tell us how well the model is doing\n",
     "lg.score(df[[\"Age\"]], df[\"Survived\"])\n",
-    "# with this result we can see that the model is not doing well, but this is expected, because we are using only one column to predict the target variable\n",
+    "# with this result we can see that the model is not doing well,\n",
+    "# but this is expected, because we are using only one column to predict the target variable\n",
     "# and we didn't even checked if the \"Age\" column is a good column to use to predict the \"Survived\" column.\n",
-    "# Also there are many other things necessary to do before we can actually use a model to guarantee it's results are good,\n",
+    "# Also there are many other things necessary to\n",
+    "# do before we can actually use a model to guarantee it's results are good,\n",
     "# like splitting the data into a training set and a test set."
    ]
   }
